fix: scrolling getting stuck

--- a/extension/src/entrypoints/popup/App.css
+++ b/extension/src/entrypoints/popup/App.css
@@ -7,7 +7,7 @@
 
 body {
   width: 440px;
-  height: 720px;
+  max-height: 720px;
   font-size: 16px;
   overflow: hidden;
   scrollbar-width: none;
